src/GummiBearKingdom/wwwroot/css/styles.css
body {
    font-family: 'Lato', sans-serif;
}

/******************** NavBar ********************/

.navbar-default {
    border-radius: 0;
    padding: 10px;
      top:0;
      left:0;
      height:100%;
      width:100%;
      border-color: #cd1829;
      background: 
        radial-gradient(
         farthest-corner at 45px 45px, 
          #db4655, #cd1829
        );
    }

.kingdom {
    display: block;
    margin-top: 25px;
    font-size: 50px;
}

.navbar-default .navbar-brand {
    font-size: 30px;
    text-shadow: -2px 2px #808080;
    font-family: 'Berkshire Swash', cursive;
}

.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover, .navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover{
    color: white;
}

.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
    text-decoration: underline dotted;
}


.secondary-nav .btn-info {
    background-color: white;
}


.secondary-nav .btn {
    padding: 10px 25px;
    border-radius: 0;
    border: none; 
    margin-top: 0;
    margin-right: 5px;
}

.secondary-nav:first-child button {
        margin-top: 0;
    }

.secondary-nav .btn a {
    font-weight: 700;
    font-size: 22px;
    color: black;
    padding: 10px 0;
}




.secondary-nav .selected .btn, .secondary-nav .btn-info:hover  {
    background-color: #fcb514;
}

.secondary-nav .selected .btn a, .secondary-nav .btn-info a:hover  {
    color: white;
    text-decoration: none;
}

.form-control  {
    font-size: 12px;
    font-weight: bold;
}

input.form-control {
    border-radius: 15px;
    border-top: solid 2px #cbcbcb;
    border-left: 2px solid #cbcbcb;
}

.input-group {
    width: 300px;
}

.input-group-btn>.btn {
    border-radius: 25px;
    color: black;
    background-color: #fcb514;
}

.btn-default {
    border-color: none;
}

.small-nav {
    font-size: 12px;
}




/******************** Gummi Display ********************/

.gummi-display {
    height: 200px;
}

ul.shop-by-type{
    list-style: none;
    padding-left: 0;
}

ul.shop-by-type li {
    margin-bottom: 10px;
}


ul.shop-by-type a {
    color: black;
    padding-bottom: 4px;
}

.top-padding {
    padding-top: 30px;
}

.bold {
    font-weight: bold;
}

.dark-red, .dark-red a { 
    color:#af1e2d 
}

.gummy-pic {
    width: 100%;
}



/******************** Media Queries ********************/

@media (min-width: 768px) {
    .secondary-nav .btn {
        margin-top: -20px;
    }
}

@media (min-width: 1200px) {
    .navbar-default .navbar-brand {
        font-size: 40px;
    }
}

